Fixed navbar issue where navbar would shift due to scroll bar; added scroll bar on all pages

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,6 +2,12 @@ img {
   /* width: 100%; */
 }
 
+html {
+  overflow: -moz-scrollbars-vertical; 
+  overflow-y: scroll;
+}
+
+
 background-image {
   height: 25%
 }
